| Summary: | ASTERISK-28578: race condition on pjsip channelstats command | ||
| Reporter: | Salah Ahmed (rubel) | Labels: | pjsip |
| Date Opened: | 2019-10-10 06:41:42 | Date Closed: | 2019-10-21 07:21:14 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 13.28.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Hello,
Recently we experienced a crash. This crash happened during execute "pjsip show channelstats" by an external module. It seems this is a separate thread running to fetch and print rtp stats. Actually the crash happened on ao2_lock, just before it going to read the rtp stats on a rtp instance. According to gdb backtrace log, it seems the session media was already cleaned up at that moment. Thanks, Salah | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-10-10 06:41:43.505-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2019-10-21 07:21:15.608-0500 Change 13044 merged by Friendly Automation: Crash during "pjsip show channelstats" execution [https://gerrit.asterisk.org/c/asterisk/+/13044|https://gerrit.asterisk.org/c/asterisk/+/13044] By: Friendly Automation (friendly-automation) 2019-10-21 07:22:20.140-0500 Change 13073 merged by Friendly Automation: Crash during "pjsip show channelstats" execution [https://gerrit.asterisk.org/c/asterisk/+/13073|https://gerrit.asterisk.org/c/asterisk/+/13073] By: Friendly Automation (friendly-automation) 2019-10-21 07:29:16.419-0500 Change 13074 merged by Friendly Automation: Crash during "pjsip show channelstats" execution [https://gerrit.asterisk.org/c/asterisk/+/13074|https://gerrit.asterisk.org/c/asterisk/+/13074] By: Friendly Automation (friendly-automation) 2019-10-21 08:04:46.084-0500 Change 13075 merged by Friendly Automation: Crash during "pjsip show channelstats" execution [https://gerrit.asterisk.org/c/asterisk/+/13075|https://gerrit.asterisk.org/c/asterisk/+/13075] | ||